--- a/src/app/components/employees/employees-list/employees-list.component.html
+++ b/src/app/components/employees/employees-list/employees-list.component.html
@@ -13,12 +13,12 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let employee of employees">
-        <td>{{ employee.id }}</td>
+      <tr *ngFor="let employee of employees; index as i">
+        <td>{{ i + 1 }}</td>
         <td>{{ employee.name }}</td>
         <td>{{ employee.email }}</td>
         <td>{{ employee.phone }}</td>
-        <td>{{ employee.salary }}</td>
+        <td>{{ employee.salary | number }}</td>
         <td>{{ employee.department }}</td>
         <td><a [routerLink]="['/employees', 'edit', employee.id]">View</a></td>
       </tr>
@@ -26,3 +26,7 @@
   </table>
   <p *ngIf="!employees || employees.length <= 0">No Employees Found</p>
 </div>
+
+<script>
+  console.log("it's working");
+</script>
