--- a/src/app/components/employees/edit-employee/edit-employee.component.html
+++ b/src/app/components/employees/edit-employee/edit-employee.component.html
@@ -1,4 +1,4 @@
-<div class="container my-5">
+<!-- <div class="container my-5">
   <div class="row">
     <div class="col-6">
       <form #form="ngForm" (ngSubmit)="updateEmployee()">
@@ -73,6 +73,158 @@
           Delete
         </button>
       </form>
+    </div>
+  </div>
+</div> -->
+
+<div class="row">
+  <div class="col-lg-3"><app-sidebar></app-sidebar></div>
+  <div class="col-lg-9">
+    <div class="mt-10 sm:mt-0">
+      <div class="md:grid md:gap-6">
+        <div class="md:col-span-1">
+          <div class="px-4 sm:px-0">
+            <h3 class="text-lg font-medium leading-6 text-gray-900">
+              Update Information
+            </h3>
+            <!-- <p class="mt-1 text-sm text-gray-600">Use a permanent address where you can receive mail.</p> -->
+          </div>
+        </div>
+        <div class="mt-1 md:mt-0 md:col-span-2">
+          <form #form="ngForm" (ngSubmit)="updateEmployee()">
+            <div class="shadow overflow-hidden sm:rounded-md">
+              <div class="px-4 py-5 bg-white sm:p-6">
+                <div class="grid grid-cols-10 gap-6">
+                  <div class="col-span-4 sm:col-span-3">
+                    <label
+                      for="name"
+                      class="block text-sm font-medium text-gray-700"
+                      >Name</label
+                    >
+                    <input
+                      type="text"
+                      name="name"
+                      id="name"
+                      autocomplete="given-name"
+                      class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
+                      [(ngModel)]="employeeDetails.name"
+                    />
+                  </div>
+
+                  <!-- <div class="col-span-6 sm:col-span-3">
+                <label for="last-name" class="block text-sm font-medium text-gray-700">Last name</label>
+                <input type="text" name="last-name" id="last-name" autocomplete="family-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+              </div> -->
+
+                  <div class="col-span-4 sm:col-span-4">
+                    <label
+                      for="email-address"
+                      class="block text-sm font-medium text-gray-700"
+                      >Email address</label
+                    >
+                    <input
+                      type="text"
+                      name="email-address"
+                      id="email-address"
+                      autocomplete="email"
+                      class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
+                      [(ngModel)]="employeeDetails.email"
+                    />
+                  </div>
+
+                  <div class="col-span-4 sm:col-span-3">
+                    <label
+                      for="phone"
+                      class="block text-sm font-medium text-gray-700"
+                      >Phone Number</label
+                    >
+                    <!-- <select id="country" name="country" autocomplete="country-name" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+                  <option>United States</option>
+                  <option>Canada</option>
+                  <option>Mexico</option>
+                </select> -->
+                    <input
+                      type="number"
+                      name="phone"
+                      id="phone"
+                      autocomplete="phone"
+                      class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
+                      [(ngModel)]="employeeDetails.phone"
+                    />
+                  </div>
+
+                  <!-- <div class="col-span-6">
+                <label for="street-address" class="block text-sm font-medium text-gray-700">Street address</label>
+                <input type="text" name="street-address" id="street-address" autocomplete="street-address" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+              </div> -->
+
+                  <div class="col-span-4 sm:col-span-6 lg:col-span-2">
+                    <label
+                      for="salary"
+                      class="block text-sm font-medium text-gray-700"
+                      >Salary</label
+                    >
+                    <input
+                      type="number"
+                      name="salary"
+                      id="salary"
+                      autocomplete="salary"
+                      class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
+                      [(ngModel)]="employeeDetails.salary"
+                    />
+                  </div>
+
+                  <div class="col-span-4 sm:col-span-3 lg:col-span-2">
+                    <label
+                      for="department"
+                      class="block text-sm font-medium text-gray-700"
+                      >Department</label
+                    >
+                    <input
+                      type="text"
+                      name="department"
+                      id="department"
+                      autocomplete="address-level1"
+                      class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
+                      [(ngModel)]="employeeDetails.department"
+                    />
+                  </div>
+
+                  <div class="col-span-4 sm:col-span-3 lg:col-span-2">
+                    <label
+                      for="postal-code"
+                      class="block text-sm font-medium text-gray-700"
+                      >ZIP / Postal code</label
+                    >
+                    <input
+                      type="text"
+                      name="postal-code"
+                      id="postal-code"
+                      autocomplete="postal-code"
+                      class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div class="px-4 py-3 bg-gray-50 text-right sm:px-6">
+                <button
+                  type="submit"
+                  class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                >
+                  Save
+                </button>
+                <button
+                  type="button"
+                  class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-red-600 hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500"
+                  (click)="deleteEmployee(employeeDetails.id)"
+                >
+                  Delete
+                </button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
   </div>
 </div>
