--- a/src/app/components/employees/employees-list/employees-list.component.html
+++ b/src/app/components/employees/employees-list/employees-list.component.html
@@ -1,30 +1,35 @@
-<div class="container my-5">
-  <h1 class="mb-3">Employees</h1>
+<div class="row">
+  <div class="col-lg-3"><app-sidebar></app-sidebar></div>
+  <div class="col-lg-9">
+    <h1 class="mb-3">Employees</h1>
 
-  <table class="table" *ngIf="employees && employees.length > 0">
-    <thead>
-      <tr>
-        <th>Id</th>
-        <th>Name</th>
-        <th>Email</th>
-        <th>Phone</th>
-        <th>Salary</th>
-        <th>Department</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let employee of employees; index as i">
-        <td>{{ i + 1 }}</td>
-        <td>{{ employee.name }}</td>
-        <td>{{ employee.email }}</td>
-        <td>{{ employee.phone }}</td>
-        <td>{{ employee.salary | number }}</td>
-        <td>{{ employee.department }}</td>
-        <td><a [routerLink]="['/employees', 'edit', employee.id]">View</a></td>
-      </tr>
-    </tbody>
-  </table>
-  <p *ngIf="!employees || employees.length <= 0">No Employees Found</p>
+    <table class="table" *ngIf="employees && employees.length > 0">
+      <thead>
+        <tr>
+          <th>Id</th>
+          <th>Name</th>
+          <th>Email</th>
+          <th>Phone</th>
+          <th>Salary</th>
+          <th>Department</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let employee of employees; index as i">
+          <td>{{ i + 1 }}</td>
+          <td>{{ employee.name }}</td>
+          <td>{{ employee.email }}</td>
+          <td>{{ employee.phone }}</td>
+          <td>{{ employee.salary | number }}</td>
+          <td>{{ employee.department }}</td>
+          <td>
+            <a [routerLink]="['/employees', 'edit', employee.id]">View</a>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <p *ngIf="!employees || employees.length <= 0">No Employees Found</p>
+  </div>
 </div>
 
 <script>
