sorted out some icons that were not showing

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -20,7 +20,7 @@
             </li>
           </ul>
         </li>
-        <li class="submenu">
+        <!-- <li class="submenu">
           <a href="#"
             ><i class="la la-cube"></i> <span> Apps</span>
             <span class="menu-arrow"></span
@@ -47,7 +47,7 @@
             <li><a class="" href="inbox">Email</a></li>
             <li><a class="" href="file_manager">File Manager</a></li>
           </ul>
-        </li>
+        </li> -->
         <li class="menu-title">
           <span>Employees</span>
         </li>
@@ -108,7 +108,7 @@
             ><i class="la la-ticket"></i> <span>Tickets</span></a
           >
         </li>
-        <li class="menu-title">
+        <!-- <li class="menu-title">
           <span>HR</span>
         </li>
         <li class="submenu">
@@ -124,8 +124,8 @@
             <li><a class="" href="provident_fund">Provident Fund</a></li>
             <li><a class="" href="taxes">Taxes</a></li>
           </ul>
-        </li>
-        <li class="submenu">
+        </li> -->
+        <!-- <li class="submenu">
           <a href="#"
             ><i class="la la-files-o"></i> <span> Accounting </span>
             <span class="menu-arrow"></span
@@ -140,7 +140,7 @@
               <a class="" href="budget_revenues">Budget Revenues</a>
             </li>
           </ul>
-        </li>
+        </li> -->
         <li class="submenu">
           <a href="#"
             ><i class="la la-money"></i> <span> Payroll </span>
@@ -152,11 +152,11 @@
             <li><a class="" href="payroll_item"> Payroll Items </a></li>
           </ul>
         </li>
-        <li class="">
+        <!-- <li class="">
           <a href="policies"
             ><i class="la la-file-pdf-o"></i> <span>Policies</span></a
           >
-        </li>
+        </li> -->
         <li class="submenu">
           <a href="#"
             ><i class="la la-pie-chart"></i> <span> Reports </span>
@@ -183,11 +183,11 @@
             <li>
               <a class="" href="payslip_reports"> Payslip Report </a>
             </li>
-            <li>
+            <!-- <li>
               <a class="" href="attendance_reports"> Attendance Report </a>
             </li>
             <li><a class="" href="leave_reports"> Leave Report </a></li>
-            <li><a class="" href="daily_reports"> Daily Report </a></li>
+            <li><a class="" href="daily_reports"> Daily Report </a></li> -->
           </ul>
         </li>
         <li class="menu-title">
@@ -214,7 +214,7 @@
             </li>
           </ul>
         </li>
-        <li class="submenu">
+        <!-- <li class="submenu">
           <a href="#"
             ><i class="la la-crosshairs"></i> <span> Goals </span>
             <span class="menu-arrow"></span
@@ -223,7 +223,7 @@
             <li><a class="" href="goal_tracking"> Goal List </a></li>
             <li><a class="" href="goal_type"> Goal Type </a></li>
           </ul>
-        </li>
+        </li> -->
         <li class="submenu">
           <a href="#"
             ><i class="la la-edit"></i> <span> Training </span>
@@ -251,15 +251,15 @@
             ><i class="la la-times-circle"></i> <span>Termination</span></a
           >
         </li>
-        <li class="menu-title">
+        <!-- <li class="menu-title">
           <span>Administration</span>
         </li>
         <li class="">
           <a href="assets_list"
             ><i class="la la-object-ungroup"></i> <span>Assets</span></a
           >
-        </li>
-        <li class="submenu">
+        </li> -->
+        <!-- <li class="submenu">
           <a href="#"
             ><i class="la la-briefcase"></i> <span> Jobs </span>
             <span class="menu-arrow"></span
@@ -291,7 +291,7 @@
               <a class="" href="apptitude_result"> Aptitude Results </a>
             </li>
           </ul>
-        </li>
+        </li> -->
         <li class="">
           <a href="knowledgebase"
             ><i class="la la-question"></i> <span>Knowledgebase</span></a
@@ -382,7 +382,7 @@
             <li><a class="" href="blank_page"> Blank Page </a></li>
           </ul>
         </li>
-        <li class="menu-title">
+        <!-- <li class="menu-title">
           <span>UI Interface</span>
         </li>
         <li class="">
@@ -402,8 +402,8 @@
             <li><a class="" href="notifications">Notification</a></li>
             <li><a class="" href="toaster">Toaster</a></li>
           </ul>
-        </li>
-        <li class="submenu">
+        </li> -->
+        <!-- <li class="submenu">
           <a href="#"
             ><i class="las la-chart-bar"></i> <span>Charts</span>
             <span class="menu-arrow"></span
@@ -414,7 +414,7 @@
             <li><a class="" href="peity_charts">Peity Charts</a></li>
             <li><a class="" href="c3_charts">C3 Charts</a></li>
           </ul>
-        </li>
+        </li> -->
         <li class="submenu">
           <a href="#"
             ><i class="la la-object-group"></i> <span> Forms </span>
