edited the forms for edit, add and delete

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="main-wrapper">
   <div class="header">
     <div class="header-left">
-      <a href="dashboard.html" class="logo">
+      <a href="dashboard" class="logo">
         <img
           src="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/img/logo.png"
           width="40"
