--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
 <div class="main-wrapper">
   <div class="header">
     <div class="header-left">
-      <a href="dashboard.html" class="logo">
+      <a href="dashboard" class="logo">
         <img
           src="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/img/logo.png"
           width="40"
@@ -368,7 +368,7 @@
         <div class="dropdown-menu">
           <a class="dropdown-item" href="profile">My Profile</a>
           <a class="dropdown-item" href="settings">Settings</a>
-          <a class="dropdown-item" href="auth-login">Logout</a>
+          <a class="dropdown-item" href="login">Logout</a>
         </div>
       </li>
     </ul>
@@ -855,7 +855,7 @@
             <div class="card-body">
               <span class="dash-widget-icon"><i class="fa fa-cubes"></i></span>
               <div class="dash-widget-info">
-                <h3>112</h3>
+                <h3>52</h3>
                 <span>Projects</span>
               </div>
             </div>
@@ -866,7 +866,7 @@
             <div class="card-body">
               <span class="dash-widget-icon"><i class="fa fa-usd"></i></span>
               <div class="dash-widget-info">
-                <h3>44</h3>
+                <h3>40</h3>
                 <span>Clients</span>
               </div>
             </div>
@@ -1067,7 +1067,7 @@
                 <div class="stats-info">
                   <p>
                     Completed Projects
-                    <strong>85 <small>/ 112</small></strong>
+                    <strong>35 <small>/ 52</small></strong>
                   </p>
                   <div class="progress">
                     <div
@@ -1082,7 +1082,7 @@
                 </div>
                 <div class="stats-info">
                   <p>
-                    Open Tickets <strong>190 <small>/ 212</small></strong>
+                    Open Tickets <strong>90 <small>/ 112</small></strong>
                   </p>
                   <div class="progress">
                     <div
@@ -1097,7 +1097,7 @@
                 </div>
                 <div class="stats-info">
                   <p>
-                    Closed Tickets <strong>22 <small>/ 212</small></strong>
+                    Closed Tickets <strong>22 <small>/ 112</small></strong>
                   </p>
                   <div class="progress">
                     <div
@@ -1123,7 +1123,7 @@
                   <div class="col-md-6 col-6 text-center">
                     <div class="stats-box mb-4">
                       <p>Total Tasks</p>
-                      <h3>385</h3>
+                      <h3>185</h3>
                     </div>
                   </div>
                   <div class="col-md-6 col-6 text-center">
@@ -1189,11 +1189,11 @@
               <div>
                 <p>
                   <i class="fa fa-dot-circle-o text-purple me-2"></i>Completed
-                  Tasks <span class="float-end">166</span>
+                  Tasks <span class="float-end">100</span>
                 </p>
                 <p>
                   <i class="fa fa-dot-circle-o text-warning me-2"></i>Inprogress
-                  Tasks <span class="float-end">115</span>
+                  Tasks <span class="float-end">95</span>
                 </p>
                 <p>
                   <i class="fa fa-dot-circle-o text-success me-2"></i>On Hold
@@ -1221,7 +1221,7 @@
               <div class="leave-info-box">
                 <div class="media d-flex align-items-center">
                   <a href="profile" class="avatar"
-                    ><img alt="" src="assets/img/user.jpg"
+                    ><img alt="" src="/src/assets/image/user.jpg"
                   /></a>
                   <div class="media-body flex-grow-1">
                     <div class="text-sm my-0">Martin Lewis</div>
@@ -1240,7 +1240,7 @@
               <div class="leave-info-box">
                 <div class="media d-flex align-items-center">
                   <a href="profile" class="avatar"
-                    ><img alt="" src="assets/img/user.jpg"
+                    ><img alt="" src="/src/assets/image/user.jpg"
                   /></a>
                   <div class="media-body flex-grow-1">
                     <div class="text-sm my-0">Martin Lewis</div>
@@ -1406,7 +1406,7 @@
                           <a href="#" class="avatar"
                             ><img
                               alt=""
-                              src="assets/img/profiles/avatar-19.jpg"
+                              src="/src/assets/image/profiles/avatar-19.jpg"
                           /></a>
                           <a href="client-profile"
                             >Barry Cuda <span>CEO</span></a
@@ -1470,7 +1470,7 @@
                           <a href="#" class="avatar"
                             ><img
                               alt=""
-                              src="assets/img/profiles/avatar-19.jpg"
+                              src="/src/assets/image/profiles/avatar-19.jpg"
                           /></a>
                           <a href="client-profile"
                             >Tressa Wexler <span>Manager</span></a
@@ -1534,7 +1534,7 @@
                           <a href="client-profile" class="avatar"
                             ><img
                               alt=""
-                              src="assets/img/profiles/avatar-07.jpg"
+                              src="/src/assets/image/profiles/avatar-07.jpg"
                           /></a>
                           <a href="client-profile"
                             >Ruby Bartlett <span>CEO</span></a
@@ -1598,7 +1598,7 @@
                           <a href="client-profile" class="avatar"
                             ><img
                               alt=""
-                              src="assets/img/profiles/avatar-06.jpg"
+                              src="/src/assets/image/profiles/avatar-06.jpg"
                           /></a>
                           <a href="client-profile">
                             Misty Tison <span>CEO</span></a
@@ -1662,7 +1662,7 @@
                           <a href="client-profile" class="avatar"
                             ><img
                               alt=""
-                              src="assets/img/profiles/avatar-14.jpg"
+                              src="/src/assets/image/profiles/avatar-14.jpg"
                           /></a>
                           <a href="client-profile">
                             Daniel Deacon <span>CEO</span></a
