--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -12,11 +12,9 @@
             <span class="menu-arrow"></span
           ></a>
           <ul style="display: none">
-            <li><a class="" href="dashboard.html">Admin Dashboard</a></li>
+            <li><a class="" href="dashboard">Admin Dashboard</a></li>
             <li>
-              <a class="active" href="employee_dashboard.html"
-                >Employee Dashboard</a
-              >
+              <a class="active" href="employee-dashboard">Employee Dashboard</a>
             </li>
           </ul>
         </li>
@@ -329,8 +327,8 @@
             <span class="menu-arrow"></span
           ></a>
           <ul style="display: none">
-            <li><a class="" href="index"> Login </a></li>
-            <li><a class="" href="auth-register"> Register </a></li>
+            <li><a class="" href="login"> Login </a></li>
+            <li><a class="" href="register"> Register </a></li>
             <li>
               <a class="" href="auth-recoverpw"> Forgot Password </a>
             </li>
